--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             height: 297mm;
             box-sizing: border-box;
             background: #ffffff;
-            border: 1px solid #cccccc;
+            border: none;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             overflow: visible;
         }
@@ -43,6 +43,8 @@
             gap: 4mm;
             transform-origin: top left;
             transform: rotate(90deg);
+            box-shadow: 0 0 0 0 transparent;
+            border: none;
         }
 
         .ticket__header,
