--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             transform-origin: top left;
             transform: rotate(90deg);
             box-shadow: 0 0 0 0 transparent;
-            border: none;
+            border: 1px solid #cccccc;
+            border-radius: 2mm;
+            background-clip: padding-box;
         }
 
         .ticket__header,
