--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         :root {
             color-scheme: light;
-            font-family: "Segoe UI", Arial, sans-serif;
+            font-family: "Arial", "Helvetica", sans-serif;
         }
 
         body {
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: #f0f0f0;
+            background: #ffffff;
         }
 
         .page {
@@ -25,7 +25,7 @@
             box-sizing: border-box;
             background: #ffffff;
             border: none;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: none;
             overflow: visible;
         }
 
@@ -44,7 +44,7 @@
             transform-origin: top left;
             transform: rotate(90deg);
             box-shadow: 0 0 0 0 transparent;
-            border: 1px solid #cccccc;
+            border: 1px solid #000000;
             border-radius: 2mm;
             background-clip: padding-box;
         }
@@ -79,7 +79,7 @@
         .ticket__label {
             font-size: 8pt;
             text-transform: uppercase;
-            color: #555555;
+            color: #000000;
             line-height: 1.2;
         }
 
@@ -87,12 +87,13 @@
             font-size: 10pt;
             font-weight: 600;
             line-height: 1.25;
+            color: #000000;
         }
 
         .ticket__footer {
             font-size: 8pt;
             text-transform: uppercase;
-            color: #555555;
+            color: #000000;
             padding-top: 2mm;
         }
 
